--- a/css/style.css
+++ b/css/style.css
@@ -1741,15 +1741,15 @@ label {
 .widget-title {
 	font-size: 16px;
 	position: relative;
-	margin-bottom: 60px;
+	margin-bottom: 30px;
 }
 .widget-title:after {
 	content: "";
 	position: absolute;
-	bottom: -30px;
+	bottom: -15px;
 	left: 0;
 	display: block;
-	width: 20px;
+	width: 40px;
 	height: 3px;
 	background: #eaeaea;
 }
@@ -1884,7 +1884,9 @@ label {
 	font-size: 12px;
 	line-height: 22px;
 }
-.widget-hungry-contact-details p { margin-bottom: 30px; }
+.widget-hungry-contact-details p { width: 70%;
+    text-align: justify;
+    font-size: 13px; }
 .widget-hungry-contact-details a:hover { color: #000; }
 .widget-hungry-contact-details .contact-phone,
 .widget-hungry-contact-details .contact-email,
